# videostreamingplatform-analytics

./: CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: analytics-ci.yml
catalog-admin/: Dockerfile  admin.py  requirements.txt
catalog-admin/tests/: test_admin.py  test_admin_lifecycle.py
k8s/: catalog-admin.yaml  kafka-es-consumer.yaml  spark-job.yaml  watch-history-consumer.yaml
kafka-es-consumer/: Dockerfile  requirements.txt
kafka-es-consumer/src/: consumer.py
kafka-es-consumer/tests/: test_consumer.py  test_consumer_extra.py  test_consumer_lifecycle.py  test_index_delete.py
spark/: Dockerfile  requirements.txt
spark/src/: watch_history_ingest.py
spark/tests/: test_ingest.py
terraform/: iceberg.tf  main.tf  outputs.tf  variables.tf
watch-history-consumer/: Dockerfile  requirements.txt
watch-history-consumer/src/: consumer.py
watch-history-consumer/tests/: test_consumer.py  test_consumer_extra.py  test_consumer_lifecycle.py  test_flush.py
