[project]
name = "videostreamingplatform-analytics"
version = "0.1.0"
description = "Data pipelines for the video streaming platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["kafka-es-consumer/tests", "watch-history-consumer/tests", "catalog-admin/tests"]
